syntax = "proto3";

// Code From Vansh Jain
// DS Lab 1
// SBU ID - 116713519

option go_package = "./";

package proto;

service BankingService {
  rpc Prepare(PrepareMessage) returns (PromiseMessage);
  rpc Accept(AcceptMessage) returns (AcceptedMessage);
  rpc Decide(CommitMessage) returns (Empty) {};
  rpc Catchup(CatchupMessage) returns (SyncedResponse){};
  rpc TransferMoney(TransferRequest) returns (TransactionResponse) {}
  rpc SyncServerStatus(ServerStatus) returns(Empty){}
  rpc PrintBalance(Empty) returns(PrintBalanceResponse){}
  rpc PrintLog(Empty) returns(PrintLogResponse){}
  rpc PrintDB(Empty) returns(PrintDBResponse){}
  rpc PrintPerformance(Empty) returns(PrintPerformanceResponse){}
  rpc CollectAllBalance(Empty) returns (BalanceDetails){}

}

message PrintBalanceResponse{
  int64 balance=1;
}
message PrintLogResponse{
  repeated Transaction logs=1;
}
message PrintDBResponse{
  repeated Block datastore=1;
}
message PrintPerformanceResponse{
  int64 total_transactions=1;
  float total_latency=2;
}

message Transaction {
  int64 timestamp = 1;
  string sender = 2;
  string receiver = 3;
  float amount = 4;
}

message BalanceDetails{
  int64 clientId = 1;
  int64 balance = 2;
  repeated Transaction log = 3;
}

message ServerStatus{
  repeated int64 server_status=1;
}

message Block{
  int64 block_id=1;
	repeated Transaction mb=2;
}

message Empty {
}

message PrepareMessage {
  int64 server_id = 1;
  int64 ballot_num = 2;
  int64 last_commited_ballot_num = 3;
}

message PromiseMessage {
  int64 n = 1;
  int64 acceptNum = 2;
  int64 leaderSyncBallotNum = 3;
  repeated Transaction acceptVal = 4;
  repeated Transaction localTransactions = 5;
}

message AcceptMessage {
  int64 n = 1;
  repeated Transaction majorBlock = 3;
}

message AcceptedMessage {
  int64 n = 1;
  repeated Transaction majorBlock = 2;
}

message CommitMessage {
  int64 n = 1;
}

message CatchupMessage {
  int64 ballot_num = 1;
}

message SyncedResponse{
  string isSynced = 1;
  repeated Block datastore = 2;
}


message ClientRequest {
  string name = 1;
}

message BalanceResponse {
  string message = 1;
  float balance = 2;
}

message TransferRequest {
  string sender = 1;
  string receiver = 2;
  float amount = 3;
  repeated int64 server_status =4;
}

message TransactionResponse {
  string message = 1;
  bool success = 2;
}
